[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/manager/camara_dividida.gd" type="Script" id=1]
[ext_resource path="res://script/manager/ControladorJuego.gd" type="Script" id=2]
[ext_resource path="res://fuente/BowlbyOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://script/camara/ControlCamara.gd" type="Script" id=6]
[ext_resource path="res://prefabs/MenuPausa.tscn" type="PackedScene" id=8]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 1
background_sky = SubResource( 1 )
background_color = Color( 0.282353, 0.243137, 0.443137, 1 )

[sub_resource type="DynamicFont" id=3]
size = 53
outline_size = 2
outline_color = Color( 0.447059, 0.278431, 0.156863, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="campo" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="musica" type="AudioStreamPlayer" parent="."]

[node name="mundo" type="Spatial" parent="."]

[node name="ControlCamara" type="Spatial" parent="."]
transform = Transform( 0.5, 0.55667, -0.663414, 0, 0.766044, 0.642788, 0.866025, -0.321394, 0.383022, 0, 0, 0 )
script = ExtResource( 6 )
screenEdgeBuffer = 15.0

[node name="Camera" type="Camera" parent="ControlCamara"]
transform = Transform( 1, 2.68221e-07, 3.57628e-07, -2.98023e-08, 1, -2.08616e-07, 2.98023e-08, 1.49012e-08, 1, -1.90735e-06, 0, 65 )
projection = 1
current = true
size = 13.0

[node name="camara_dividida" type="Node" parent="."]
script = ExtResource( 1 )

[node name="jugadores" type="HBoxContainer" parent="camara_dividida"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="J1y2" type="VBoxContainer" parent="camara_dividida/jugadores"]
margin_left = 510.0
margin_right = 510.0
margin_bottom = 600.0
custom_constants/separation = 4
alignment = 1

[node name="jugador_1" type="ViewportContainer" parent="camara_dividida/jugadores/J1y2"]
margin_bottom = 596.0
size_flags_vertical = 3
stretch = true

[node name="V0" type="Viewport" parent="camara_dividida/jugadores/J1y2/jugador_1"]
size = Vector2( 0, 596 )
handle_input_locally = false
render_target_update_mode = 3

[node name="mundo" type="Spatial" parent="camara_dividida/jugadores/J1y2/jugador_1/V0"]

[node name="jugador_2" type="ViewportContainer" parent="camara_dividida/jugadores/J1y2"]
margin_top = 600.0
margin_bottom = 600.0
stretch = true

[node name="V1" type="Viewport" parent="camara_dividida/jugadores/J1y2/jugador_2"]
handle_input_locally = false
render_target_update_mode = 3

[node name="J3y4" type="VBoxContainer" parent="camara_dividida/jugadores"]
margin_left = 514.0
margin_right = 514.0
margin_bottom = 600.0
custom_constants/separation = 4
alignment = 1

[node name="jugador_3" type="ViewportContainer" parent="camara_dividida/jugadores/J3y4"]
margin_bottom = 596.0
size_flags_vertical = 3
stretch = true

[node name="V2" type="Viewport" parent="camara_dividida/jugadores/J3y4/jugador_3"]
size = Vector2( 0, 596 )
handle_input_locally = false
render_target_update_mode = 3

[node name="jugador_4" type="ViewportContainer" parent="camara_dividida/jugadores/J3y4"]
margin_top = 600.0
margin_bottom = 600.0
stretch = true

[node name="V3" type="Viewport" parent="camara_dividida/jugadores/J3y4/jugador_4"]
handle_input_locally = false
render_target_update_mode = 3

[node name="Interfaz" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margen" type="MarginContainer" parent="Interfaz"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Interfaz/margen"]
margin_left = 50.0
margin_top = 258.0
margin_right = 974.0
margin_bottom = 342.0
text = "TANKS"
align = 1
valign = 1
autowrap = true

[node name="MenuPausa" parent="Interfaz" instance=ExtResource( 8 )]
visible = false

[node name="ControladorJuego" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="tanques" type="Spatial" parent="."]

[node name="posiciones" type="Spatial" parent="."]

[node name="potenciadores" type="Spatial" parent="."]

[node name="TiempoPotenciado" type="Spatial" parent="."]
